--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <script src="script.js"></script>
-    
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="screen"></div>
+        <div class="row-container">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>DEL</button>
+            <button>AC</button>
+        </div>
+        <div class="row-container">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>x</button>
+            <button>÷</button>
+        </div>
+        <div class="row-container">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>+</button>
+            <button>-</button>
+        </div>
+        <div class="row-container">
+            <button>0</button>
+            <button>.</button>
+            <button>^</button>
+            <button>!</button>
+            <button>=</button>
+        </div>
+    </div>
 </body>
 </html>
