--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <button>-</button>
             </div>
             <div class="row-container">
-                <button>.</button>
+                <button id="decimal">.</button>
                 <button>0</button>
                 <button>=</button>
                 <button>+</button>
